{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 12,
  "lineage": "c799b2fe-8c18-482d-dd07-ed57bdcc7f6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "skmt_ec2_fbt_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a40c12e5bd9b028",
            "arn": "arn:aws:ec2:sa-east-1:924309154876:instance/i-011038ee486deedee",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SKMT-EC2-Role",
            "id": "i-011038ee486deedee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "esakamoto-aws3-sp-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035c6d0328e568574",
            "private_dns": "ip-10-0-1-175.sa-east-1.compute.internal",
            "private_ip": "10.0.1.175",
            "public_ip": "18.228.154.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d874b09953c6e0a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0033c025410893242",
            "tags": {
              "Name": "SKMT-EC2-Server-with-Filebeat",
              "SKMT-SystemManager": "true"
            },
            "tags_all": {
              "Name": "SKMT-EC2-Server-with-Filebeat",
              "SKMT-SystemManager": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3a85b55a21897f4"
            ]
          },
          "dependencies": [
            "aws_security_group.skmt_sg_ec2_fbt",
            "aws_subnet.skmt_public_subnet_ec2_fbt",
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "smkt_igw_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:internet-gateway/igw-07e9c81a2878ffd9e",
            "id": "igw-07e9c81a2878ffd9e",
            "owner_id": "924309154876",
            "tags": {
              "Name": "smkt_igw_ec2_fbt"
            },
            "tags_all": {
              "Name": "smkt_igw_ec2_fbt"
            },
            "vpc_id": "vpc-0f1826a5989bf81ad"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "skmt_route_1_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07e9c81a2878ffd9e",
            "id": "r-rtb-0ace637e1d2f2b1001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ace637e1d2f2b100",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.smkt_igw_ec2_fbt",
            "aws_route_table.skmt_route_table_ec2_fbt",
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skmt_route_table_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:route-table/rtb-0ace637e1d2f2b100",
            "id": "rtb-0ace637e1d2f2b100",
            "owner_id": "924309154876",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "skmt_route_table_ec2_fbt"
            },
            "tags_all": {
              "Name": "skmt_route_table_ec2_fbt"
            },
            "vpc_id": "vpc-0f1826a5989bf81ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c7621432d02934e",
            "route_table_id": "rtb-0ace637e1d2f2b100",
            "subnet_id": "subnet-0033c025410893242"
          },
          "dependencies": [
            "aws_route_table.skmt_route_table_ec2_fbt",
            "aws_subnet.skmt_public_subnet_ec2_fbt",
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "skmt_sg_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:security-group/sg-0d3a85b55a21897f4",
            "description": "Security Group for SKMT VPC",
            "egress": [],
            "id": "sg-0d3a85b55a21897f4",
            "ingress": [],
            "name": "skmt_sg_ec2_fbt",
            "name_prefix": "",
            "owner_id": "924309154876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skmt_sg_ec2_fbt"
            },
            "tags_all": {
              "Name": "skmt_sg_ec2_fbt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1826a5989bf81ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_1_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-674541239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d3a85b55a21897f4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_ec2_fbt",
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_2_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1019870294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d3a85b55a21897f4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_ec2_fbt",
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_3_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-797350259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d3a85b55a21897f4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_ec2_fbt",
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skmt_public_subnet_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:subnet/subnet-0033c025410893242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0033c025410893242",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_public_subnet_ec2_fbt"
            },
            "tags_all": {
              "Name": "skmt_public_subnet_ec2_fbt"
            },
            "vpc_id": "vpc-0f1826a5989bf81ad"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc_ec2_fbt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skmt_vpc_ec2_fbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:vpc/vpc-0f1826a5989bf81ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcb966e2ba66c1ed",
            "default_route_table_id": "rtb-0138516a451c0115d",
            "default_security_group_id": "sg-054874064eac5f8cc",
            "dhcp_options_id": "dopt-15316b72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f1826a5989bf81ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0138516a451c0115d",
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_vpc_ec2_fbt"
            },
            "tags_all": {
              "Name": "skmt_vpc_ec2_fbt"
            }
          }
        }
      ]
    }
  ]
}